--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         <version.org.datanucleus.gae>1.0.10</version.org.datanucleus.gae>
         <version.org.datanucleus.jdo>2.3-eb</version.org.datanucleus.jdo>
         <version.org.hibernate.search>4.1.0.CR3</version.org.hibernate.search>
-        <version.org.infinispan>5.1.3.FINAL</version.org.infinispan>
+        <version.org.infinispan>5.2.0-SNAPSHOT</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
         <version.junit>4.7</version.junit>
         <version.arquillian>1.0.0.CR7</version.arquillian>
