--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
         <version.org.datanucleus.gae>1.0.10</version.org.datanucleus.gae>
         <version.org.datanucleus.jdo>2.3-eb</version.org.datanucleus.jdo>
-        <version.org.hibernate.search>4.1.0.CR3</version.org.hibernate.search>
+        <version.org.hibernate.search>4.2.0-SNAPSHOT</version.org.hibernate.search>
         <version.org.infinispan>5.2.0-SNAPSHOT</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
         <version.junit>4.7</version.junit>
