CAPEDWARF-198 Add OAuth service impl

--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
         <!-- Testing Objectify -->
         <version.objectify>4.0b1</version.objectify>
         <!-- Testing REST -->
-        <version.org.jboss.resteasy>3.0.4.Final</version.org.jboss.resteasy>
+        <version.org.jboss.resteasy>3.0.5.Final</version.org.jboss.resteasy>
         <!-- Build configuration -->
         <version.datanucleus.plugin>3.1.2</version.datanucleus.plugin>
         <version.dependency.plugin>2.8</version.dependency.plugin>
@@ -958,6 +958,12 @@
             <dependency>
                 <groupId>org.jboss.resteasy</groupId>
                 <artifactId>jaxrs-api</artifactId>
+                <version>${version.org.jboss.resteasy}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-client</artifactId>
                 <version>${version.org.jboss.resteasy}</version>
             </dependency>
 
