Remove PicketLink Fed.

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,6 @@
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
         <version.org.picketlink>2.1.0.Final</version.org.picketlink>
-        <version.org.picketlink.fed>2.0.3.Final</version.org.picketlink.fed>
         <version.org.picketlink.consolidated.social>2.0.0.Beta1</version.org.picketlink.consolidated.social>
         <version.javassist>3.15.0-GA</version.javassist>
         <version.javax.el>1.2</version.javax.el>
@@ -345,8 +344,8 @@
 
             <dependency>
                 <groupId>org.picketlink</groupId>
-                <artifactId>picketlink-fed-api</artifactId>
-                <version>${version.org.picketlink.fed}</version>
+                <artifactId>picketlink-core</artifactId>
+                <version>${version.org.picketlink}</version>
             </dependency>
 
             <dependency>
