--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
         <version.json>20090211</version.json>
         <version.org.apache.velocity>1.6.3</version.org.apache.velocity>
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
-        <version.org.jboss.logging>3.1.0.GA</version.org.jboss.logging>
-        <version.org.jboss.modules.jboss-modules>1.1.1.GA</version.org.jboss.modules.jboss-modules>
+        <version.org.jboss.logging>3.1.1.GA</version.org.jboss.logging>
+        <version.org.jboss.modules.jboss-modules>1.1.2.GA</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
         <version.org.picketlink>2.1.1.Final</version.org.picketlink>
@@ -69,9 +69,9 @@
         <version.org.hibernate.search>4.2.0-SNAPSHOT</version.org.hibernate.search>
         <version.org.infinispan>5.2.0-SNAPSHOT</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
-        <version.junit>4.7</version.junit>
-        <version.arquillian>1.0.0.CR7</version.arquillian>
-        <version.jboss.as7>7.1.1.Final</version.jboss.as7>
+        <version.junit>4.10</version.junit>
+        <version.arquillian>1.0.0.Final</version.arquillian>
+        <version.jboss.as7>7.2.0.Alpha1-SNAPSHOT</version.jboss.as7>
         <version.jboss.maven.transformer>1.0.0.Beta2</version.jboss.maven.transformer>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.1.1</version.org.apache.httpcomponents>
