--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>multitenancy</module>
         <module>oauth</module>
         <module>openshift</module>
+        <module>search</module>
         <module>tasks</module>
         <module>testsuite</module>
         <module>urlfetch</module>
@@ -243,6 +244,12 @@
             <dependency>
                 <groupId>org.jboss.capedwarf.blue</groupId>
                 <artifactId>capedwarf-oauth</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>capedwarf-search</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
