--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -75,13 +75,13 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.appengine</groupId>
+            <groupId>javax.jdo</groupId>
             <artifactId>jdo2-api</artifactId>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>com.google.appengine</groupId>
+            <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jta_1.1_spec</artifactId>
             <scope>test</scope>
         </dependency>
