--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,8 @@
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
         <version.org.datanucleus.gae>1.0.10</version.org.datanucleus.gae>
         <version.org.datanucleus.jdo>2.3-eb</version.org.datanucleus.jdo>
-        <version.org.hibernate.search>4.2.0-SNAPSHOT</version.org.hibernate.search>
-        <version.org.infinispan>5.2.0-SNAPSHOT</version.org.infinispan>
+        <version.org.hibernate.search>4.2.0.Beta1</version.org.hibernate.search>
+        <version.org.infinispan>5.2.0.ALPHA1</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
         <version.junit>4.10</version.junit>
         <version.arquillian>1.0.0.Final</version.arquillian>
