--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <version.org.bouncycastle>1.47</version.org.bouncycastle>
         <version.org.jboss.logging>3.1.1.GA</version.org.jboss.logging>
         <version.org.jboss.modules.jboss-modules>1.1.2.GA</version.org.jboss.modules.jboss-modules>
+        <version.org.jboss.vfs>3.1.0.Final</version.org.jboss.vfs>
         <version.org.jboss.spec.javax.servlet.api>1.0.0.Final</version.org.jboss.spec.javax.servlet.api>
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
         <version.org.picketlink>2.1.1.Final</version.org.picketlink>
@@ -62,11 +63,11 @@
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
         <version.javax.mail>1.4.4</version.javax.mail>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec>
-        <version.org.datanucleus.core>1.1.5</version.org.datanucleus.core>
-        <version.org.datanucleus.jpa>1.1.5</version.org.datanucleus.jpa>
+        <version.org.datanucleus.core>3.1.0-m5</version.org.datanucleus.core>
+        <version.org.datanucleus.jpa>3.1.0-m3</version.org.datanucleus.jpa>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
-        <version.org.datanucleus.gae>1.0.10</version.org.datanucleus.gae>
-        <version.org.datanucleus.jdo>2.3-eb</version.org.datanucleus.jdo>
+        <version.org.datanucleus.gae>2.1.0-final</version.org.datanucleus.gae>
+        <version.org.datanucleus.jdo>3.0</version.org.datanucleus.jdo>
         <version.org.hibernate.search>4.2.0.Beta1</version.org.hibernate.search>
         <version.org.infinispan>5.2.0.ALPHA1</version.org.infinispan>
         <version.net.jcip>1.0</version.net.jcip>
@@ -380,7 +381,7 @@
 
             <dependency>
                 <groupId>org.datanucleus</groupId>
-                <artifactId>datanucleus-jpa</artifactId>
+                <artifactId>datanucleus-api-jpa</artifactId>
                 <version>${version.org.datanucleus.jpa}</version>
             </dependency>
 
@@ -394,12 +395,11 @@
                 <groupId>org.datanucleus</groupId>
                 <artifactId>datanucleus-core</artifactId>
                 <version>${version.org.datanucleus.core}</version>
-                <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>javax.jdo</groupId>
-                <artifactId>jdo2-api</artifactId>
+                <artifactId>jdo-api</artifactId>
                 <version>${version.org.datanucleus.jdo}</version>
             </dependency>
 
@@ -458,6 +458,12 @@
                 <groupId>org.jboss.modules</groupId>
                 <artifactId>jboss-modules</artifactId>
                 <version>${version.org.jboss.modules.jboss-modules}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss</groupId>
+                <artifactId>jboss-vfs</artifactId>
+                <version>${version.org.jboss.vfs}</version>
             </dependency>
 
             <!--JBoss Weld / CDI -->
