--- a/urlfetch/pom.xml
+++ b/urlfetch/pom.xml
@@ -38,6 +38,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.jboss.arquillian.protocol</groupId>
             <artifactId>arquillian-protocol-servlet</artifactId>
             <scope>test</scope>
@@ -63,11 +69,6 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.arquillian.junit</groupId>
-                    <artifactId>arquillian-junit-container</artifactId>
-                    <scope>test</scope>
-                </dependency>
-                <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-remote</artifactId>
                     <scope>test</scope>
@@ -83,40 +84,31 @@
                     <name>gae</name>
                 </property>
             </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                       <groupId>org.jboss.maven.plugins</groupId>
-                       <artifactId>maven-transformer-plugin</artifactId>
-                       <version>${version.jboss.maven.transformer}</version>
-                       <executions>
-                           <execution>
-                               <phase>process-test-classes</phase>
-                               <goals>
-                                   <goal>bytecode</goal>
-                               </goals>
-                           </execution>
-                       </executions>
-                       <configuration>
-                           <filterPattern>(.+)TestCase.class$</filterPattern>
-                           <transformerClassName>org.jboss.maven.arquillian.transformer.CapeDwarfJUnitTransformer</transformerClassName>
-                           <output>test</output>
-                       </configuration>
-                   </plugin>
-                </plugins>
-            </build>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.arquillian.junit</groupId>
-                    <artifactId>arquillian-junit-container</artifactId>
-                </dependency>
-                <dependency>
-                    <groupId>org.jboss.maven.plugins</groupId>
-                    <artifactId>arquillian-transformer</artifactId>
+                    <groupId>org.jboss.capedwarf.blue</groupId>
+                    <artifactId>capedwarf-arquillian</artifactId>
+                    <scope>test</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
                     <artifactId>arquillian-gae-local</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <!-- TODO - why do we need these? -->
+                <dependency>
+                    <groupId>org.jboss.shrinkwrap</groupId>
+                    <artifactId>shrinkwrap-api</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                    <artifactId>shrinkwrap-resolver-api-maven</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                    <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
