--- a/urlfetch/pom.xml
+++ b/urlfetch/pom.xml
@@ -75,7 +75,7 @@
                 </dependency>
             </dependencies>
         </profile>
-        <!-- GAE -->
+        <!-- GAE local -->
         <profile>
             <id>gae</id>
             <activation>
@@ -95,20 +95,26 @@
                     <artifactId>arquillian-gae-local</artifactId>
                     <scope>test</scope>
                 </dependency>
-                <!-- TODO - why do we need these? -->
+            </dependencies>
+        </profile>
+        <!-- GAE remote - AppSpot -->
+        <profile>
+            <id>gae-remote</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>gae-remote</name>
+                </property>
+            </activation>
+            <dependencies>
                 <dependency>
-                    <groupId>org.jboss.shrinkwrap</groupId>
-                    <artifactId>shrinkwrap-api</artifactId>
+                    <groupId>org.jboss.capedwarf.blue</groupId>
+                    <artifactId>capedwarf-arquillian</artifactId>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
-                    <groupId>org.jboss.shrinkwrap.resolver</groupId>
-                    <artifactId>shrinkwrap-resolver-api-maven</artifactId>
-                    <scope>test</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.jboss.shrinkwrap.resolver</groupId>
-                    <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+                    <groupId>org.jboss.arquillian.container</groupId>
+                    <artifactId>arquillian-gae-remote</artifactId>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
