--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -139,6 +139,21 @@
                     <name>gae</name>
                 </property>
             </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.10</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/*MultipleAppsTestCase.java</exclude>
+                            </excludes>
+                            <skipTests>false</skipTests>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
             <dependencies>
                 <dependency>
                     <groupId>org.jboss.capedwarf.blue</groupId>
