--- a/bytecode/pom.xml
+++ b/bytecode/pom.xml
@@ -92,6 +92,11 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>capedwarf-quota</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
             <artifactId>capedwarf-search</artifactId>
         </dependency>
 
