--- a/cluster-tests/pom.xml
+++ b/cluster-tests/pom.xml
@@ -52,6 +52,23 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+           	<groupId>org.infinispan</groupId>
+           	<artifactId>infinispan-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.infinispan</groupId>
+            <artifactId>infinispan-distexec-demo</artifactId>
+            <scope>test</scope>
+            <version>${version.org.infinispan}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+        	   <artifactId>cdi-api</artifactId>
+        	   <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
