--- a/integration-testsuite/pom.xml
+++ b/integration-testsuite/pom.xml
@@ -11,6 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.capedwarf.blue</groupId>
     <artifactId>integration-testsuite</artifactId>
+    <name>CapeDwarf Integration Testsuite</name>
     <packaging>pom</packaging>
     <properties>
         <version.jboss.as>7.2.0.Alpha1-SNAPSHOT</version.jboss.as>
