More mvn work to make testsuite run

--- a/integration-testsuite/build-as/build.xml
+++ b/integration-testsuite/build-as/build.xml
@@ -26,6 +26,8 @@
 
     <property name="output.dir" value="target/jboss-as-${jboss.as.release.version}"/>
 
+    <target name="noop"/>
+
     <target name="base" depends="clean-target, modules-minimalistic, copy-files, make-dirs"/>
 
     <target name="copy-files">
