--- a/datastore/pom.xml
+++ b/datastore/pom.xml
@@ -89,6 +89,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.capedwarf.blue</groupId>
+            <artifactId>integrate-cd</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
