--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>environment</module>
         <module>files</module>
         <module>images</module>
+        <module>integration-testsuite</module>
         <module>log</module>
         <module>mail</module>
         <module>memcache</module>
@@ -158,6 +159,23 @@
     <dependencyManagement>
         <!-- The parent pom manages the inter-dependencies of the modules. -->
         <dependencies>
+            <!-- CapeDwarf Testsuite -->
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>build-as</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.capedwarf.blue</groupId>
+                <artifactId>integrate-cd</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+            </dependency>
+
+            <!-- CapeDwarf APIs -->
 
             <dependency>
                 <groupId>org.jboss.capedwarf.blue</groupId>
@@ -645,9 +663,6 @@
                     <name>testsuite</name>
                 </property>
             </activation>
-            <modules>
-                <module>integration-testsuite</module>
-            </modules>
             <dependencies>
                 <dependency>
                     <groupId>org.jboss.as</groupId>
