--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
         <!-- Build configuration -->
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
+        <!-- Maven plugins -->
+        <version.maven.compiler>2.5.1</version.maven.compiler>
+        <version.maven.surefire>2.12.1</version.maven.surefire>
+        <version.maven.release>2.3.2</version.maven.release>
+        <version.maven.jar>2.2</version.maven.jar>
     </properties>
 
     <build>
@@ -93,7 +98,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>${version.maven.compiler}</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <fork>true</fork>
@@ -103,7 +108,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>${version.maven.release}</version>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
@@ -111,7 +116,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.1</version>
+                <version>${version.maven.surefire}</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <includes>
@@ -128,7 +133,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.2</version>
+                <version>${version.maven.jar}</version>
                 <executions>
                     <execution>
                         <goals>
